Correzioni minori   * battitura,   * traduzione di teorema   * miglioramento frasi   * nome Helmholtz

--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -56,10 +56,10 @@
 
 \theoremstyle{theoremdd}
 % support for counting
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{corollary}{Corollary}[theorem]
+\newtheorem{theorem}{Teorema}[section]
+\newtheorem{corollary}{Corollario}[theorem]
 \newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{definition}{Definition}
+\newtheorem{definition}{Definizione}
 \newtheorem{remark}{Remark}
 
 % added support for proof parts
